Compiler_Lab3/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ExtDefList
Rule 2     ExtDefList -> ExtDef ExtDefList
Rule 3     ExtDefList -> empty
Rule 4     ExtDef -> Specifier SEMI
Rule 5     ExtDef -> Specifier FunDec CompSt
Rule 6     ExtDef -> Specifier FunDec SEMI
Rule 7     ExtDef -> Specifier ExtDecList SEMI
Rule 8     ExtDecList -> VarDec
Rule 9     ExtDecList -> VarDec COMMA ExtDecList
Rule 10    Specifier -> TYPE
Rule 11    Specifier -> StructSpecifier
Rule 12    StructSpecifier -> STRUCT OptTag LC DefList RC
Rule 13    StructSpecifier -> STRUCT Tag
Rule 14    OptTag -> ID
Rule 15    OptTag -> empty
Rule 16    Tag -> ID
Rule 17    VarDec -> ID
Rule 18    VarDec -> VarDec LB INT RB
Rule 19    FunDec -> ID LP VarList RP
Rule 20    FunDec -> ID LP RP
Rule 21    VarList -> ParamDec COMMA VarList
Rule 22    VarList -> ParamDec
Rule 23    ParamDec -> Specifier VarDec
Rule 24    CompSt -> LC DefList StmtList RC
Rule 25    StmtList -> Stmt StmtList
Rule 26    StmtList -> empty
Rule 27    Stmt -> Exp SEMI
Rule 28    Stmt -> CompSt
Rule 29    Stmt -> IF LP Exp RP Stmt
Rule 30    Stmt -> WHILE LP Exp RP Stmt
Rule 31    Stmt -> IF LP Exp RP Stmt ELSE Stmt
Rule 32    Stmt -> RETURN Exp SEMI
Rule 33    DefList -> Def DefList
Rule 34    DefList -> empty
Rule 35    Def -> Specifier DecList SEMI
Rule 36    DecList -> Dec
Rule 37    DecList -> Dec COMMA DecList
Rule 38    Dec -> VarDec
Rule 39    Dec -> VarDec ASSIGNOP Exp
Rule 40    Exp -> Exp ASSIGNOP Exp
Rule 41    Exp -> Exp AND Exp
Rule 42    Exp -> Exp OR Exp
Rule 43    Exp -> Exp RELOP Exp
Rule 44    Exp -> Exp PLUS Exp
Rule 45    Exp -> Exp MINUS Exp
Rule 46    Exp -> Exp STAR Exp
Rule 47    Exp -> Exp DIV Exp
Rule 48    Exp -> LP Exp RP
Rule 49    Exp -> MINUS Exp
Rule 50    Exp -> NOT Exp
Rule 51    Exp -> ID LP Args RP
Rule 52    Exp -> ID LP RP
Rule 53    Exp -> Exp LB Exp RB
Rule 54    Exp -> Exp DOT ID
Rule 55    Exp -> ID
Rule 56    Exp -> INT
Rule 57    Exp -> FLOAT
Rule 58    Args -> Exp COMMA Args
Rule 59    Args -> Exp
Rule 60    empty -> <empty>
Rule 61    ExtDef -> error SEMI
Rule 62    FunDec -> error RP
Rule 63    CompSt -> error RC
Rule 64    Stmt -> error SEMI
Rule 65    Def -> Specifier error SEMI

Terminals, with rules where they appear

AND                  : 41
ASSIGNOP             : 39 40
COMMA                : 9 21 37 58
DIV                  : 47
DOT                  : 54
ELSE                 : 31
FLOAT                : 57
ID                   : 14 16 17 19 20 51 52 54 55
IF                   : 29 31
INT                  : 18 56
LB                   : 18 53
LC                   : 12 24
LP                   : 19 20 29 30 31 48 51 52
MINUS                : 45 49
NOT                  : 50
OR                   : 42
PLUS                 : 44
RB                   : 18 53
RC                   : 12 24 63
RELOP                : 43
RETURN               : 32
RP                   : 19 20 29 30 31 48 51 52 62
SEMI                 : 4 6 7 27 32 35 61 64 65
STAR                 : 46
STRUCT               : 12 13
TYPE                 : 10
WHILE                : 30
error                : 61 62 63 64 65

Nonterminals, with rules where they appear

Args                 : 51 58
CompSt               : 5 28
Dec                  : 36 37
DecList              : 35 37
Def                  : 33
DefList              : 12 24 33
Exp                  : 27 29 30 31 32 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 50 53 53 54 58 59
ExtDecList           : 7 9
ExtDef               : 2
ExtDefList           : 1 2
FunDec               : 5 6
OptTag               : 12
ParamDec             : 21 22
Program              : 0
Specifier            : 4 5 6 7 23 35 65
Stmt                 : 25 29 30 31 31
StmtList             : 24 25
StructSpecifier      : 11
Tag                  : 13
VarDec               : 8 9 18 23 38 39
VarList              : 19 21
empty                : 3 15 26 34

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ExtDefList
    (2) ExtDefList -> . ExtDef ExtDefList
    (3) ExtDefList -> . empty
    (4) ExtDef -> . Specifier SEMI
    (5) ExtDef -> . Specifier FunDec CompSt
    (6) ExtDef -> . Specifier FunDec SEMI
    (7) ExtDef -> . Specifier ExtDecList SEMI
    (61) ExtDef -> . error SEMI
    (60) empty -> .
    (10) Specifier -> . TYPE
    (11) Specifier -> . StructSpecifier
    (12) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (13) StructSpecifier -> . STRUCT Tag

    error           shift and go to state 2
    $end            reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 9
    STRUCT          shift and go to state 8

    Specifier                      shift and go to state 1
    StructSpecifier                shift and go to state 3
    ExtDefList                     shift and go to state 4
    Program                        shift and go to state 5
    empty                          shift and go to state 6
    ExtDef                         shift and go to state 7

state 1

    (4) ExtDef -> Specifier . SEMI
    (5) ExtDef -> Specifier . FunDec CompSt
    (6) ExtDef -> Specifier . FunDec SEMI
    (7) ExtDef -> Specifier . ExtDecList SEMI
    (19) FunDec -> . ID LP VarList RP
    (20) FunDec -> . ID LP RP
    (62) FunDec -> . error RP
    (8) ExtDecList -> . VarDec
    (9) ExtDecList -> . VarDec COMMA ExtDecList
    (17) VarDec -> . ID
    (18) VarDec -> . VarDec LB INT RB

    SEMI            shift and go to state 10
    ID              shift and go to state 13
    error           shift and go to state 12

    FunDec                         shift and go to state 11
    VarDec                         shift and go to state 15
    ExtDecList                     shift and go to state 14

state 2

    (61) ExtDef -> error . SEMI

    SEMI            shift and go to state 16


state 3

    (11) Specifier -> StructSpecifier .

    SEMI            reduce using rule 11 (Specifier -> StructSpecifier .)
    ID              reduce using rule 11 (Specifier -> StructSpecifier .)
    error           reduce using rule 11 (Specifier -> StructSpecifier .)


state 4

    (1) Program -> ExtDefList .

    $end            reduce using rule 1 (Program -> ExtDefList .)


state 5

    (0) S' -> Program .



state 6

    (3) ExtDefList -> empty .

    $end            reduce using rule 3 (ExtDefList -> empty .)


state 7

    (2) ExtDefList -> ExtDef . ExtDefList
    (2) ExtDefList -> . ExtDef ExtDefList
    (3) ExtDefList -> . empty
    (4) ExtDef -> . Specifier SEMI
    (5) ExtDef -> . Specifier FunDec CompSt
    (6) ExtDef -> . Specifier FunDec SEMI
    (7) ExtDef -> . Specifier ExtDecList SEMI
    (61) ExtDef -> . error SEMI
    (60) empty -> .
    (10) Specifier -> . TYPE
    (11) Specifier -> . StructSpecifier
    (12) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (13) StructSpecifier -> . STRUCT Tag

    error           shift and go to state 2
    $end            reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 9
    STRUCT          shift and go to state 8

    Specifier                      shift and go to state 1
    ExtDef                         shift and go to state 7
    StructSpecifier                shift and go to state 3
    ExtDefList                     shift and go to state 17
    empty                          shift and go to state 6

state 8

    (12) StructSpecifier -> STRUCT . OptTag LC DefList RC
    (13) StructSpecifier -> STRUCT . Tag
    (14) OptTag -> . ID
    (15) OptTag -> . empty
    (16) Tag -> . ID
    (60) empty -> .

    ID              shift and go to state 18
    LC              reduce using rule 60 (empty -> .)

    OptTag                         shift and go to state 19
    empty                          shift and go to state 20
    Tag                            shift and go to state 21

state 9

    (10) Specifier -> TYPE .

    SEMI            reduce using rule 10 (Specifier -> TYPE .)
    ID              reduce using rule 10 (Specifier -> TYPE .)
    error           reduce using rule 10 (Specifier -> TYPE .)


state 10

    (4) ExtDef -> Specifier SEMI .

    error           reduce using rule 4 (ExtDef -> Specifier SEMI .)
    TYPE            reduce using rule 4 (ExtDef -> Specifier SEMI .)
    STRUCT          reduce using rule 4 (ExtDef -> Specifier SEMI .)
    $end            reduce using rule 4 (ExtDef -> Specifier SEMI .)


state 11

    (5) ExtDef -> Specifier FunDec . CompSt
    (6) ExtDef -> Specifier FunDec . SEMI
    (24) CompSt -> . LC DefList StmtList RC
    (63) CompSt -> . error RC

    SEMI            shift and go to state 24
    LC              shift and go to state 23
    error           shift and go to state 25

    CompSt                         shift and go to state 22

state 12

    (62) FunDec -> error . RP

    RP              shift and go to state 26


state 13

    (19) FunDec -> ID . LP VarList RP
    (20) FunDec -> ID . LP RP
    (17) VarDec -> ID .

    LP              shift and go to state 27
    COMMA           reduce using rule 17 (VarDec -> ID .)
    LB              reduce using rule 17 (VarDec -> ID .)
    SEMI            reduce using rule 17 (VarDec -> ID .)


state 14

    (7) ExtDef -> Specifier ExtDecList . SEMI

    SEMI            shift and go to state 28


state 15

    (8) ExtDecList -> VarDec .
    (9) ExtDecList -> VarDec . COMMA ExtDecList
    (18) VarDec -> VarDec . LB INT RB

    SEMI            reduce using rule 8 (ExtDecList -> VarDec .)
    COMMA           shift and go to state 29
    LB              shift and go to state 30


state 16

    (61) ExtDef -> error SEMI .

    error           reduce using rule 61 (ExtDef -> error SEMI .)
    TYPE            reduce using rule 61 (ExtDef -> error SEMI .)
    STRUCT          reduce using rule 61 (ExtDef -> error SEMI .)
    $end            reduce using rule 61 (ExtDef -> error SEMI .)


state 17

    (2) ExtDefList -> ExtDef ExtDefList .

    $end            reduce using rule 2 (ExtDefList -> ExtDef ExtDefList .)


state 18

    (14) OptTag -> ID .
    (16) Tag -> ID .

    LC              reduce using rule 14 (OptTag -> ID .)
    SEMI            reduce using rule 16 (Tag -> ID .)
    ID              reduce using rule 16 (Tag -> ID .)
    error           reduce using rule 16 (Tag -> ID .)


state 19

    (12) StructSpecifier -> STRUCT OptTag . LC DefList RC

    LC              shift and go to state 31


state 20

    (15) OptTag -> empty .

    LC              reduce using rule 15 (OptTag -> empty .)


state 21

    (13) StructSpecifier -> STRUCT Tag .

    SEMI            reduce using rule 13 (StructSpecifier -> STRUCT Tag .)
    ID              reduce using rule 13 (StructSpecifier -> STRUCT Tag .)
    error           reduce using rule 13 (StructSpecifier -> STRUCT Tag .)


state 22

    (5) ExtDef -> Specifier FunDec CompSt .

    error           reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)
    TYPE            reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)
    STRUCT          reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)
    $end            reduce using rule 5 (ExtDef -> Specifier FunDec CompSt .)


state 23

    (24) CompSt -> LC . DefList StmtList RC
    (33) DefList -> . Def DefList
    (34) DefList -> . empty
    (35) Def -> . Specifier DecList SEMI
    (65) Def -> . Specifier error SEMI
    (60) empty -> .
    (10) Specifier -> . TYPE
    (11) Specifier -> . StructSpecifier
    (12) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (13) StructSpecifier -> . STRUCT Tag

    IF              reduce using rule 60 (empty -> .)
    WHILE           reduce using rule 60 (empty -> .)
    RETURN          reduce using rule 60 (empty -> .)
    error           reduce using rule 60 (empty -> .)
    LP              reduce using rule 60 (empty -> .)
    MINUS           reduce using rule 60 (empty -> .)
    NOT             reduce using rule 60 (empty -> .)
    ID              reduce using rule 60 (empty -> .)
    INT             reduce using rule 60 (empty -> .)
    FLOAT           reduce using rule 60 (empty -> .)
    LC              reduce using rule 60 (empty -> .)
    RC              reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 9
    STRUCT          shift and go to state 8

    StructSpecifier                shift and go to state 3
    Specifier                      shift and go to state 32
    Def                            shift and go to state 33
    DefList                        shift and go to state 35
    empty                          shift and go to state 34

state 24

    (6) ExtDef -> Specifier FunDec SEMI .

    error           reduce using rule 6 (ExtDef -> Specifier FunDec SEMI .)
    TYPE            reduce using rule 6 (ExtDef -> Specifier FunDec SEMI .)
    STRUCT          reduce using rule 6 (ExtDef -> Specifier FunDec SEMI .)
    $end            reduce using rule 6 (ExtDef -> Specifier FunDec SEMI .)


state 25

    (63) CompSt -> error . RC

    RC              shift and go to state 36


state 26

    (62) FunDec -> error RP .

    SEMI            reduce using rule 62 (FunDec -> error RP .)
    LC              reduce using rule 62 (FunDec -> error RP .)
    error           reduce using rule 62 (FunDec -> error RP .)


state 27

    (19) FunDec -> ID LP . VarList RP
    (20) FunDec -> ID LP . RP
    (21) VarList -> . ParamDec COMMA VarList
    (22) VarList -> . ParamDec
    (23) ParamDec -> . Specifier VarDec
    (10) Specifier -> . TYPE
    (11) Specifier -> . StructSpecifier
    (12) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (13) StructSpecifier -> . STRUCT Tag

    RP              shift and go to state 38
    TYPE            shift and go to state 9
    STRUCT          shift and go to state 8

    Specifier                      shift and go to state 37
    VarList                        shift and go to state 39
    ParamDec                       shift and go to state 40
    StructSpecifier                shift and go to state 3

state 28

    (7) ExtDef -> Specifier ExtDecList SEMI .

    error           reduce using rule 7 (ExtDef -> Specifier ExtDecList SEMI .)
    TYPE            reduce using rule 7 (ExtDef -> Specifier ExtDecList SEMI .)
    STRUCT          reduce using rule 7 (ExtDef -> Specifier ExtDecList SEMI .)
    $end            reduce using rule 7 (ExtDef -> Specifier ExtDecList SEMI .)


state 29

    (9) ExtDecList -> VarDec COMMA . ExtDecList
    (8) ExtDecList -> . VarDec
    (9) ExtDecList -> . VarDec COMMA ExtDecList
    (17) VarDec -> . ID
    (18) VarDec -> . VarDec LB INT RB

    ID              shift and go to state 41

    VarDec                         shift and go to state 15
    ExtDecList                     shift and go to state 42

state 30

    (18) VarDec -> VarDec LB . INT RB

    INT             shift and go to state 43


state 31

    (12) StructSpecifier -> STRUCT OptTag LC . DefList RC
    (33) DefList -> . Def DefList
    (34) DefList -> . empty
    (35) Def -> . Specifier DecList SEMI
    (65) Def -> . Specifier error SEMI
    (60) empty -> .
    (10) Specifier -> . TYPE
    (11) Specifier -> . StructSpecifier
    (12) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (13) StructSpecifier -> . STRUCT Tag

    RC              reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 9
    STRUCT          shift and go to state 8

    StructSpecifier                shift and go to state 3
    Specifier                      shift and go to state 32
    Def                            shift and go to state 33
    DefList                        shift and go to state 44
    empty                          shift and go to state 34

state 32

    (35) Def -> Specifier . DecList SEMI
    (65) Def -> Specifier . error SEMI
    (36) DecList -> . Dec
    (37) DecList -> . Dec COMMA DecList
    (38) Dec -> . VarDec
    (39) Dec -> . VarDec ASSIGNOP Exp
    (17) VarDec -> . ID
    (18) VarDec -> . VarDec LB INT RB

    error           shift and go to state 48
    ID              shift and go to state 41

    Dec                            shift and go to state 47
    DecList                        shift and go to state 45
    VarDec                         shift and go to state 46

state 33

    (33) DefList -> Def . DefList
    (33) DefList -> . Def DefList
    (34) DefList -> . empty
    (35) Def -> . Specifier DecList SEMI
    (65) Def -> . Specifier error SEMI
    (60) empty -> .
    (10) Specifier -> . TYPE
    (11) Specifier -> . StructSpecifier
    (12) StructSpecifier -> . STRUCT OptTag LC DefList RC
    (13) StructSpecifier -> . STRUCT Tag

    IF              reduce using rule 60 (empty -> .)
    WHILE           reduce using rule 60 (empty -> .)
    RETURN          reduce using rule 60 (empty -> .)
    error           reduce using rule 60 (empty -> .)
    LP              reduce using rule 60 (empty -> .)
    MINUS           reduce using rule 60 (empty -> .)
    NOT             reduce using rule 60 (empty -> .)
    ID              reduce using rule 60 (empty -> .)
    INT             reduce using rule 60 (empty -> .)
    FLOAT           reduce using rule 60 (empty -> .)
    LC              reduce using rule 60 (empty -> .)
    RC              reduce using rule 60 (empty -> .)
    TYPE            shift and go to state 9
    STRUCT          shift and go to state 8

    StructSpecifier                shift and go to state 3
    Specifier                      shift and go to state 32
    Def                            shift and go to state 33
    DefList                        shift and go to state 49
    empty                          shift and go to state 34

state 34

    (34) DefList -> empty .

    IF              reduce using rule 34 (DefList -> empty .)
    WHILE           reduce using rule 34 (DefList -> empty .)
    RETURN          reduce using rule 34 (DefList -> empty .)
    error           reduce using rule 34 (DefList -> empty .)
    LP              reduce using rule 34 (DefList -> empty .)
    MINUS           reduce using rule 34 (DefList -> empty .)
    NOT             reduce using rule 34 (DefList -> empty .)
    ID              reduce using rule 34 (DefList -> empty .)
    INT             reduce using rule 34 (DefList -> empty .)
    FLOAT           reduce using rule 34 (DefList -> empty .)
    LC              reduce using rule 34 (DefList -> empty .)
    RC              reduce using rule 34 (DefList -> empty .)


state 35

    (24) CompSt -> LC DefList . StmtList RC
    (25) StmtList -> . Stmt StmtList
    (26) StmtList -> . empty
    (27) Stmt -> . Exp SEMI
    (28) Stmt -> . CompSt
    (29) Stmt -> . IF LP Exp RP Stmt
    (30) Stmt -> . WHILE LP Exp RP Stmt
    (31) Stmt -> . IF LP Exp RP Stmt ELSE Stmt
    (32) Stmt -> . RETURN Exp SEMI
    (64) Stmt -> . error SEMI
    (60) empty -> .
    (40) Exp -> . Exp ASSIGNOP Exp
    (41) Exp -> . Exp AND Exp
    (42) Exp -> . Exp OR Exp
    (43) Exp -> . Exp RELOP Exp
    (44) Exp -> . Exp PLUS Exp
    (45) Exp -> . Exp MINUS Exp
    (46) Exp -> . Exp STAR Exp
    (47) Exp -> . Exp DIV Exp
    (48) Exp -> . LP Exp RP
    (49) Exp -> . MINUS Exp
    (50) Exp -> . NOT Exp
    (51) Exp -> . ID LP Args RP
    (52) Exp -> . ID LP RP
    (53) Exp -> . Exp LB Exp RB
    (54) Exp -> . Exp DOT ID
    (55) Exp -> . ID
    (56) Exp -> . INT
    (57) Exp -> . FLOAT
    (24) CompSt -> . LC DefList StmtList RC
    (63) CompSt -> . error RC

    IF              shift and go to state 61
    WHILE           shift and go to state 63
    RETURN          shift and go to state 60
    error           shift and go to state 59
    RC              reduce using rule 60 (empty -> .)
    LP              shift and go to state 58
    MINUS           shift and go to state 51
    NOT             shift and go to state 62
    ID              shift and go to state 56
    INT             shift and go to state 53
    FLOAT           shift and go to state 50
    LC              shift and go to state 23

    CompSt                         shift and go to state 55
    Stmt                           shift and go to state 52
    StmtList                       shift and go to state 57
    empty                          shift and go to state 54
    Exp                            shift and go to state 64

state 36

    (63) CompSt -> error RC .

    IF              reduce using rule 63 (CompSt -> error RC .)
    WHILE           reduce using rule 63 (CompSt -> error RC .)
    RETURN          reduce using rule 63 (CompSt -> error RC .)
    error           reduce using rule 63 (CompSt -> error RC .)
    LP              reduce using rule 63 (CompSt -> error RC .)
    MINUS           reduce using rule 63 (CompSt -> error RC .)
    NOT             reduce using rule 63 (CompSt -> error RC .)
    ID              reduce using rule 63 (CompSt -> error RC .)
    INT             reduce using rule 63 (CompSt -> error RC .)
    FLOAT           reduce using rule 63 (CompSt -> error RC .)
    LC              reduce using rule 63 (CompSt -> error RC .)
    RC              reduce using rule 63 (CompSt -> error RC .)
    ELSE            reduce using rule 63 (CompSt -> error RC .)
    TYPE            reduce using rule 63 (CompSt -> error RC .)
    STRUCT          reduce using rule 63 (CompSt -> error RC .)
    $end            reduce using rule 63 (CompSt -> error RC .)


state 37

    (23) ParamDec -> Specifier . VarDec
    (17) VarDec -> . ID
    (18) VarDec -> . VarDec LB INT RB

    ID              shift and go to state 41

    VarDec                         shift and go to state 65

state 38

    (20) FunDec -> ID LP RP .

    SEMI            reduce using rule 20 (FunDec -> ID LP RP .)
    LC              reduce using rule 20 (FunDec -> ID LP RP .)
    error           reduce using rule 20 (FunDec -> ID LP RP .)


state 39

    (19) FunDec -> ID LP VarList . RP

    RP              shift and go to state 66


state 40

    (21) VarList -> ParamDec . COMMA VarList
    (22) VarList -> ParamDec .

    COMMA           shift and go to state 67
    RP              reduce using rule 22 (VarList -> ParamDec .)


state 41

    (17) VarDec -> ID .

    ASSIGNOP        reduce using rule 17 (VarDec -> ID .)
    LB              reduce using rule 17 (VarDec -> ID .)
    COMMA           reduce using rule 17 (VarDec -> ID .)
    SEMI            reduce using rule 17 (VarDec -> ID .)
    RP              reduce using rule 17 (VarDec -> ID .)


state 42

    (9) ExtDecList -> VarDec COMMA ExtDecList .

    SEMI            reduce using rule 9 (ExtDecList -> VarDec COMMA ExtDecList .)


state 43

    (18) VarDec -> VarDec LB INT . RB

    RB              shift and go to state 68


state 44

    (12) StructSpecifier -> STRUCT OptTag LC DefList . RC

    RC              shift and go to state 69


state 45

    (35) Def -> Specifier DecList . SEMI

    SEMI            shift and go to state 70


state 46

    (38) Dec -> VarDec .
    (39) Dec -> VarDec . ASSIGNOP Exp
    (18) VarDec -> VarDec . LB INT RB

    COMMA           reduce using rule 38 (Dec -> VarDec .)
    SEMI            reduce using rule 38 (Dec -> VarDec .)
    ASSIGNOP        shift and go to state 71
    LB              shift and go to state 30


state 47

    (36) DecList -> Dec .
    (37) DecList -> Dec . COMMA DecList

    SEMI            reduce using rule 36 (DecList -> Dec .)
    COMMA           shift and go to state 72


state 48

    (65) Def -> Specifier error . SEMI

    SEMI            shift and go to state 73


state 49

    (33) DefList -> Def DefList .

    IF              reduce using rule 33 (DefList -> Def DefList .)
    WHILE           reduce using rule 33 (DefList -> Def DefList .)
    RETURN          reduce using rule 33 (DefList -> Def DefList .)
    error           reduce using rule 33 (DefList -> Def DefList .)
    LP              reduce using rule 33 (DefList -> Def DefList .)
    MINUS           reduce using rule 33 (DefList -> Def DefList .)
    NOT             reduce using rule 33 (DefList -> Def DefList .)
    ID              reduce using rule 33 (DefList -> Def DefList .)
    INT             reduce using rule 33 (DefList -> Def DefList .)
    FLOAT           reduce using rule 33 (DefList -> Def DefList .)
    LC              reduce using rule 33 (DefList -> Def DefList .)
    RC              reduce using rule 33 (DefList -> Def DefList .)


state 50

    (57) Exp -> FLOAT .

    SEMI            reduce using rule 57 (Exp -> FLOAT .)
    ASSIGNOP        reduce using rule 57 (Exp -> FLOAT .)
    AND             reduce using rule 57 (Exp -> FLOAT .)
    OR              reduce using rule 57 (Exp -> FLOAT .)
    RELOP           reduce using rule 57 (Exp -> FLOAT .)
    PLUS            reduce using rule 57 (Exp -> FLOAT .)
    MINUS           reduce using rule 57 (Exp -> FLOAT .)
    STAR            reduce using rule 57 (Exp -> FLOAT .)
    DIV             reduce using rule 57 (Exp -> FLOAT .)
    LB              reduce using rule 57 (Exp -> FLOAT .)
    DOT             reduce using rule 57 (Exp -> FLOAT .)
    RP              reduce using rule 57 (Exp -> FLOAT .)
    COMMA           reduce using rule 57 (Exp -> FLOAT .)
    RB              reduce using rule 57 (Exp -> FLOAT .)


state 51

    (49) Exp -> MINUS . Exp
    (40) Exp -> . Exp ASSIGNOP Exp
    (41) Exp -> . Exp AND Exp
    (42) Exp -> . Exp OR Exp
    (43) Exp -> . Exp RELOP Exp
    (44) Exp -> . Exp PLUS Exp
    (45) Exp -> . Exp MINUS Exp
    (46) Exp -> . Exp STAR Exp
    (47) Exp -> . Exp DIV Exp
    (48) Exp -> . LP Exp RP
    (49) Exp -> . MINUS Exp
    (50) Exp -> . NOT Exp
    (51) Exp -> . ID LP Args RP
    (52) Exp -> . ID LP RP
    (53) Exp -> . Exp LB Exp RB
    (54) Exp -> . Exp DOT ID
    (55) Exp -> . ID
    (56) Exp -> . INT
    (57) Exp -> . FLOAT

    LP              shift and go to state 58
    MINUS           shift and go to state 51
    NOT             shift and go to state 62
    ID              shift and go to state 56
    INT             shift and go to state 53
    FLOAT           shift and go to state 50

    Exp                            shift and go to state 74

state 52

    (25) StmtList -> Stmt . StmtList
    (25) StmtList -> . Stmt StmtList
    (26) StmtList -> . empty
    (27) Stmt -> . Exp SEMI
    (28) Stmt -> . CompSt
    (29) Stmt -> . IF LP Exp RP Stmt
    (30) Stmt -> . WHILE LP Exp RP Stmt
    (31) Stmt -> . IF LP Exp RP Stmt ELSE Stmt
    (32) Stmt -> . RETURN Exp SEMI
    (64) Stmt -> . error SEMI
    (60) empty -> .
    (40) Exp -> . Exp ASSIGNOP Exp
    (41) Exp -> . Exp AND Exp
    (42) Exp -> . Exp OR Exp
    (43) Exp -> . Exp RELOP Exp
    (44) Exp -> . Exp PLUS Exp
    (45) Exp -> . Exp MINUS Exp
    (46) Exp -> . Exp STAR Exp
    (47) Exp -> . Exp DIV Exp
    (48) Exp -> . LP Exp RP
    (49) Exp -> . MINUS Exp
    (50) Exp -> . NOT Exp
    (51) Exp -> . ID LP Args RP
    (52) Exp -> . ID LP RP
    (53) Exp -> . Exp LB Exp RB
    (54) Exp -> . Exp DOT ID
    (55) Exp -> . ID
    (56) Exp -> . INT
    (57) Exp -> . FLOAT
    (24) CompSt -> . LC DefList StmtList RC
    (63) CompSt -> . error RC

    IF              shift and go to state 61
    WHILE           shift and go to state 63
    RETURN          shift and go to state 60
    error           shift and go to state 59
    RC              reduce using rule 60 (empty -> .)
    LP              shift and go to state 58
    MINUS           shift and go to state 51
    NOT             shift and go to state 62
    ID              shift and go to state 56
    INT             shift and go to state 53
    FLOAT           shift and go to state 50
    LC              shift and go to state 23

    CompSt                         shift and go to state 55
    Stmt                           shift and go to state 52
    StmtList                       shift and go to state 75
    empty                          shift and go to state 54
    Exp                            shift and go to state 64

state 53

    (56) Exp -> INT .

    SEMI            reduce using rule 56 (Exp -> INT .)
    ASSIGNOP        reduce using rule 56 (Exp -> INT .)
    AND             reduce using rule 56 (Exp -> INT .)
    OR              reduce using rule 56 (Exp -> INT .)
    RELOP           reduce using rule 56 (Exp -> INT .)
    PLUS            reduce using rule 56 (Exp -> INT .)
    MINUS           reduce using rule 56 (Exp -> INT .)
    STAR            reduce using rule 56 (Exp -> INT .)
    DIV             reduce using rule 56 (Exp -> INT .)
    LB              reduce using rule 56 (Exp -> INT .)
    DOT             reduce using rule 56 (Exp -> INT .)
    RP              reduce using rule 56 (Exp -> INT .)
    COMMA           reduce using rule 56 (Exp -> INT .)
    RB              reduce using rule 56 (Exp -> INT .)


state 54

    (26) StmtList -> empty .

    RC              reduce using rule 26 (StmtList -> empty .)


state 55

    (28) Stmt -> CompSt .

    IF              reduce using rule 28 (Stmt -> CompSt .)
    WHILE           reduce using rule 28 (Stmt -> CompSt .)
    RETURN          reduce using rule 28 (Stmt -> CompSt .)
    error           reduce using rule 28 (Stmt -> CompSt .)
    LP              reduce using rule 28 (Stmt -> CompSt .)
    MINUS           reduce using rule 28 (Stmt -> CompSt .)
    NOT             reduce using rule 28 (Stmt -> CompSt .)
    ID              reduce using rule 28 (Stmt -> CompSt .)
    INT             reduce using rule 28 (Stmt -> CompSt .)
    FLOAT           reduce using rule 28 (Stmt -> CompSt .)
    LC              reduce using rule 28 (Stmt -> CompSt .)
    RC              reduce using rule 28 (Stmt -> CompSt .)
    ELSE            reduce using rule 28 (Stmt -> CompSt .)


state 56

    (51) Exp -> ID . LP Args RP
    (52) Exp -> ID . LP RP
    (55) Exp -> ID .

    LP              shift and go to state 76
    SEMI            reduce using rule 55 (Exp -> ID .)
    ASSIGNOP        reduce using rule 55 (Exp -> ID .)
    AND             reduce using rule 55 (Exp -> ID .)
    OR              reduce using rule 55 (Exp -> ID .)
    RELOP           reduce using rule 55 (Exp -> ID .)
    PLUS            reduce using rule 55 (Exp -> ID .)
    MINUS           reduce using rule 55 (Exp -> ID .)
    STAR            reduce using rule 55 (Exp -> ID .)
    DIV             reduce using rule 55 (Exp -> ID .)
    LB              reduce using rule 55 (Exp -> ID .)
    DOT             reduce using rule 55 (Exp -> ID .)
    RP              reduce using rule 55 (Exp -> ID .)
    COMMA           reduce using rule 55 (Exp -> ID .)
    RB              reduce using rule 55 (Exp -> ID .)


state 57

    (24) CompSt -> LC DefList StmtList . RC

    RC              shift and go to state 77


state 58

    (48) Exp -> LP . Exp RP
    (40) Exp -> . Exp ASSIGNOP Exp
    (41) Exp -> . Exp AND Exp
    (42) Exp -> . Exp OR Exp
    (43) Exp -> . Exp RELOP Exp
    (44) Exp -> . Exp PLUS Exp
    (45) Exp -> . Exp MINUS Exp
    (46) Exp -> . Exp STAR Exp
    (47) Exp -> . Exp DIV Exp
    (48) Exp -> . LP Exp RP
    (49) Exp -> . MINUS Exp
    (50) Exp -> . NOT Exp
    (51) Exp -> . ID LP Args RP
    (52) Exp -> . ID LP RP
    (53) Exp -> . Exp LB Exp RB
    (54) Exp -> . Exp DOT ID
    (55) Exp -> . ID
    (56) Exp -> . INT
    (57) Exp -> . FLOAT

    LP              shift and go to state 58
    MINUS           shift and go to state 51
    NOT             shift and go to state 62
    ID              shift and go to state 56
    INT             shift and go to state 53
    FLOAT           shift and go to state 50

    Exp                            shift and go to state 78

state 59

    (64) Stmt -> error . SEMI
    (63) CompSt -> error . RC

    SEMI            shift and go to state 79
    RC              shift and go to state 36


state 60
